force-app/main/default/objects/SuperUser__c/SuperUser__c.object-meta.xml
<CustomObject>
    <label>SuperUser</label>
    <nameField>
        <label>SuperUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SuperUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>