force-app/main/default/objects/SuperUser__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the SuperUser is currently active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>