force-app/main/default/objects/SuperUser__c/fields/SuperPower__c.field-meta.xml
<CustomField>
    <fullName>SuperPower__c</fullName>
    <label>SuperPower</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invicible</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>