force-app/main/default/objects/SuperUser__c/fields/testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <label>testfield</label>
    <length>255</length>
    <type>Text</type>
</CustomField>